# MagicSpells

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README_PLACE_MODEL.txt
app/src/main/assets/models/: effects_unet_int8.tflite
app/src/main/assets/shaders/: advect.comp  divergence.comp  fullscreen.frag  fullscreen.vert  jacobi.comp  project.comp  splat.comp
app/src/main/java/com/example/fluidsim/: MainActivity.kt
app/src/main/java/com/example/fluidsim/ai/: TFLiteEffectGenerator.kt
app/src/main/java/com/example/fluidsim/gl/: FluidRenderer.java  ShaderHandle.java
app/src/main/java/com/example/fluidsim/ml/: AiAssist.java
app/src/main/java/com/example/fluidsim/sim/: ComputeProgram.java  FluidSimulation.java  GlObjects.java
app/src/main/java/com/example/fluidsim/simulation/: FluidSimulationView.kt
app/src/main/java/com/example/fluidsim/ui/: FluidSurface.kt  FluidSurfaceView.java  FluidUiState.kt  FluidViewModel.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
engine/: build.gradle.kts
engine/src/main/cpp/: CMakeLists.txt  EngineNative.cpp  GlContext.cpp  GlContext.h  GraphicsContext.h  SimTypes.h  SimulationController.cpp  SimulationController.h  VulkanContext.cpp  VulkanContext.h
engine/src/main/java/com/example/engine/: Engine.kt
ml/: build.gradle.kts
ml/src/main/java/com/example/ml/: AiAssist.kt
(+1 files in other folders)
